--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slick.css">
     <title>강남 스카이 모바일 메인 페이지</title>
-    <script  src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script>
     $(document).ready(function() {
@@ -58,39 +58,70 @@
           <div class=""><a href="#"><img src="images/3.png" alt="치대"/></a></div>
         </div>
         <div class="accordion">
+          <h4>2019년 일본 의·치·약대<br/>한국어 입학시험(J-PEET) 일정안내</h4>
           <div>
+            <div>1</div>
             <p>치바 과학 대학</p>
-            <p>2019년 4월 14일</p>
+            <p>2019년 04월 14일</p>
           </div>
           <div>
-            <p>치바 과학 대학</p>
-            <p>2019년 4월 14일</p>
+            <div>2</div>
+            <p>북해도 의료대</p>
+            <p>2019년 04월 15일</p>
           </div>
           <div>
-            <p>치바 과학 대학</p>
-            <p>2019년 4월 14일</p>
+            <div>3</div>
+            <p>나가사키 국제대학</p>
+            <p>2019년 04월 21일</p>
+          </div>
+          <div>
+            <div>4</div>
+            <p>도쿠시마 분리대</p>
+            <p>2019년 05월 06일</p>
+          </div>
+          <div>
+            <div>5</div>
+            <p>아로모리 대학</p>
+            <p>2019년 05월 12일</p>
+          </div>
+          <div>
+            <div>6</div>
+            <p>훗쿠오카 제일약대</p>
+            <p>2019년 07월 초</p>
           </div>
         </div>
         <div class="whySky cf">
           <div class="whySkyBox whySky_01">
+            <div class="imgBox">
+              <img src="images/why01.jpg" alt="졸업"/>
+            </div>
             <div class="Number">1</div>
             <p>ALL Care System</p>
             <img src="" alt="">
           </div>
           <div class="whySkyBox whySky_02">
+            <div class="imgBox">
+              <img src="images/why02.jpg" alt="교제"/>
+            </div>
             <div class="Number">2</div>
             <p>최적화 교재 온·오프수업</p>
-            <p>비공개 기출문제 제공 및 자체 교재 수업 진행 지방 온라인 수강 가능</p>
+            <p>비공개 기출문제 제공 및<br/>자체 교재 수업 진행 지방 온라인 수강 가능</p>
           </div>
           <div class="whySkyBox whySky_03">
+            <div class="imgBox">
+              <img src="images/why03.jpg" alt="장학금"/>
+            </div>
             <div class="Number">3</div>
             <p>장학금 혜택</p>
-            <p>강남스카이를 통한 입학 시 부여되는 풍성한 장학금 혜택</p>
+            <p>강남스카이를 통한 입학 시<br/>부여되는 풍성한 장학금 혜택</p>
           </div>
           <div class="whySkyBox whySky_04">
+            <div class="imgBox">
+              <img src="images/why04.jpg" alt="선후배"/>
+            </div>
             <div class="Number">4</div>
             <p>선후배 연계</p>
-            <p>선후배 연계와 자체 인맥을 통한 혜택</p>
+            <p>선후배 연계와<br/>자체 인맥을 통한 혜택</p>
           </div>
         </div>
         <div class="tabMenu">
@@ -99,10 +130,20 @@
             <li class="tab-link" data-tab="tab-2">자료실</li>
           </ul>
           <div id="tab-1" class="tab-content current">
-
+            <ul>
+              <li>강남스카이-2016 해외이민유학 박람회 참여 (코엑스)</li><span>2018-12-10</span>
+              <li>강남스카이/카케학원 한국지국 -2016 일본 유학박람회 참여</li><span>2018-12-10</span>
+              <li>국내유일, 일본약대 위탁교육원</li><span>2018-12-10</span>
+              <li><강남스카이학원>일본약대 조기입시 위탁교육</li><span>2018-12-10</span>
+            </ul>
           </div>
           <div id="tab-2" class="tab-content">
-
+            <ul>
+              <li>[공지] 기출문제(화학, 수학) 및 해설지 요청시</li><span>2018-12-10</span>
+              <li>[공지] 유기화학 강의가 수강목록에 안보일 경우 대표전화로 연락</li><span>2018-12-10</span>
+              <li>수학동영상 재편집</li><span>2018-12-10</span>
+              <li>일본유학 장학금(쿠라시키예술과학대학)</li><span>2018-12-10</span>
+            </ul>
           </div>
         </div>
       </section>
