--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class=""><a href="#"><img src="images/3.png" alt="치대"/></a></div>
         </div>
         <div class="accordion">
-          <h4>2019년 일본 의·치·약대<br/>한국어 입학시험(J-PEET) 일정안내</h4>
+          <h4>2019년 일본 의·치·약대 한국어 입학시험(J-PEET) 일정안내</h4>
           <div>
             <div>1</div>
             <p>치바 과학 대학</p>
