--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script>
     $(document).ready(function() {
       $('.slider').slick({
-
+        autoplay: true,
+        autoplaySpeed: 4000,
       });
 
       $('ul.tabs li').click(function(){
