--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       $('.slider').slick({
         autoplay: true,
         autoplaySpeed: 4000,
+        dots:true,
       });
 
       $('ul.tabs li').click(function(){
@@ -92,13 +93,14 @@
           </div>
         </div>
         <div class="whySky cf">
+          <h4>왜? 강남스카이를 통한 일본약대 입시인가?</h4>
           <div class="whySkyBox whySky_01">
             <div class="imgBox">
               <img src="images/why01.jpg" alt="졸업"/>
             </div>
             <div class="Number">1</div>
             <p>ALL Care System</p>
-            <img src="" alt="">
+            <img src="images/why01_01.jpg" alt="올케어">
           </div>
           <div class="whySkyBox whySky_02">
             <div class="imgBox">
