--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         </div>
         <div class="tabMenu">
           <ul class="tabs cf">
-            <li class="tab-link current" data-tab="tab-1">신문보도자료</li>
-            <li class="tab-link" data-tab="tab-2">자료실</li>
+            <li class="tab-link current newspaper" data-tab="tab-1">신문보도자료</li>
+            <li class="tab-link data" data-tab="tab-2">자료실</li>
           </ul>
           <div id="tab-1" class="tab-content current">
             <ul>
@@ -152,8 +152,8 @@
       </section>
       <footer>
         <ul class="cf">
-          <li>카톡상담</li>
-          <li>전화상담</li>
+          <li class="kakao"><img src="images/kakao.png" alt="카카오톡"/> 플러스친구 바로가기</li>
+          <li class="call"><img src="images/call.png" alt="전화"/> Tel. 02-6329-1119</li>
         </ul>
       </footer>
     </div>
