--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@
         		<li>
         			<h3><span class="icon-dashboard"></span>강남 스카이</h3>
         			<ul>
-        				<li><a href="#">학원소개</a></li>
+        				<li>학원소개</li>
         			</ul>
         		</li>
         		<li class="">
         			<h3><span class="icon-tasks"></span>수강신청</h3>
         			<ul>
-        				<li><a href="#">온라인 강의</a></li>
+        				<li>온라인 강의</li>
         			</ul>
         		</li>
         		<li>
         			<h3><span class="icon-calendar"></span>커뮤니티</h3>
         			<ul>
-        				<li><a href="#">신문보도자료</a></li>
-        				<li><a href="#">자료실</a></li>
+        				<li>신문보도자료</li>
+        				<li>자료실</li>
         			</ul>
         		</li>
         		<li>
