--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       </section>
       <footer>
         <ul class="cf">
-          <li class="kakao"><img src="images/kakao.png" alt="카카오톡"/> 플러스친구 바로가기</li>
+          <li class="kakao"><a href="http://pf.kakao.com/_sxbuwj/chat"><img src="images/kakao.png" alt="카카오톡"/> 플러스친구 바로가기</a></li>
           <li class="call"><img src="images/call.png" alt="전화"/> Tel. 02-6329-1119</li>
         </ul>
       </footer>
