--- a/index.html
+++ b/index.html
@@ -208,6 +208,18 @@
           </div>
         </div>
       </section>
+      <div class="footer">
+        <ul class="cf">
+          <li>로그인</li>
+          <li>개인정보취급방침</li>
+          <li>이용약관</li>
+          <li>PC버전</li>
+        </ul>
+        <p>실천 대표자명 : 유점남<br/>사업자등록증 : 374 - 81 - 00782<br/>
+통신판매번호 : 제 2017-서울서초-0120호<br/>출판사신고확인증 : 제 2014-000082호<br/>
+상호명 : 주식회사 실천ㅣ 전화번호 : 02) 6329-1119<br/>주소 : 서울시 서초구 서초대로78길 36, 9층 (서초동, 강남지웰타워)<br/>
+Copyright ⓒ 2018 Sil1000. All rights reserved.</p>
+      </div>
       <footer>
         <ul class="cf">
           <li class="kakao"><a href="http://pf.kakao.com/_sxbuwj/chat"><img src="images/kakao.png" alt="카카오톡"/> 플러스친구 바로가기</a></li>
