--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Copyright ⓒ 2018 Sil1000. All rights reserved.</p>
       <footer>
         <ul class="cf">
           <li class="kakao"><a href="http://pf.kakao.com/_sxbuwj/chat"><img src="images/kakao.png" alt="카카오톡"/> 플러스친구 바로가기</a></li>
-          <li class="call"><img src="images/call.png" alt="전화"/> Tel. 02-6329-1119</li>
+          <li class="call"><a href="tel:02-6329-1119"><img src="images/call.png" alt="전화"/> Tel. 02-6329-1119</a></li>
         </ul>
       </footer>
     </div>
