--- a/index.html
+++ b/index.html
@@ -87,21 +87,33 @@
         				<li>학원소개</li>
         			</ul>
         		</li>
-        		<li class="">
-        			<h3><span class="icon-tasks"></span>수강신청</h3>
+        		<li>
+        			<h3><span class="icon-introduce"></span>학과소개</h3>
         			<ul>
-        				<li>온라인 강의</li>
+        				<li>약학과</li>
+        				<li>수의학과</li>
+        				<li>치의대</li>
         			</ul>
         		</li>
         		<li>
-        			<h3><span class="icon-calendar"></span>커뮤니티</h3>
+        			<h3><span class="icon-tasks"></span>학교 및 교수소개</h3>
         			<ul>
-        				<li>신문보도자료</li>
-        				<li>자료실</li>
+        				<li>협약학교</li>
+        				<li>교수소개</li>
         			</ul>
         		</li>
         		<li>
-        			<h3><span class="icon-heart"></span>마이페이지</h3>
+        			<h3><span class="icon-calendar"></span>합격사례</h3>
+        			<ul>
+        				<li>합격스토리</li>
+        				<li>합격시스템</li>
+        			</ul>
+        		</li>
+        		<li>
+        			<h3><span class="icon-heart"></span>동영상강의</h3>
+              <ul>
+        				<li>동영상강의</li>
+        			</ul>
         		</li>
         	</ul>
         </div>
@@ -117,7 +129,7 @@
           <div class=""><a href="#"><img src="images/2.png" alt="수의대"/></a></div>
           <div class=""><a href="#"><img src="images/3.png" alt="치대"/></a></div>
         </div>
-        <div class="accordion">
+        <!-- <div class="accordion">
           <h4>2019년 일본 의·치·약대 한국어 입학시험(J-PEET) 일정안내</h4>
           <div>
             <div>1</div>
@@ -149,7 +161,7 @@
             <p>훗쿠오카 제일약대</p>
             <p>2019년 07월 초</p>
           </div>
-        </div>
+        </div> -->
         <div class="whySky cf">
           <h4>왜? 강남스카이를 통한 일본약대 입시인가?</h4>
           <div class="whySkyBox whySky_01">
@@ -222,8 +234,8 @@ Copyright ⓒ 2018 Sil1000. All rights reserved.</p>
       </div>
       <footer>
         <ul class="cf">
-          <li class="kakao"><a href="http://pf.kakao.com/_sxbuwj/chat"><img src="images/kakao.png" alt="카카오톡"/> 플러스친구 바로가기</a></li>
-          <li class="call"><a href="tel:02-6329-1119"><img src="images/call.png" alt="전화"/> Tel. 02-6329-1119</a></li>
+          <li class="kakao"><img src="images/kakao.png" alt="카카오톡"/><a href="http://pf.kakao.com/_sxbuwj/chat"> 플러스친구<br/>바로가기</a></li>
+          <li class="call"><img src="images/call.png" alt="전화"/><a href="tel:02-6329-1119"> 문의전화<br/>02-6329-1119</a></li>
         </ul>
       </footer>
     </div>
